[gd_scene load_steps=2 format=3 uid="uid://cveujq1phfid8"]

[ext_resource type="Script" path="res://src/scenes/kid.gd" id="1_c8tee"]

[node name="Kid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_c8tee")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadAFS" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Extract .AFS"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = 44.0
offset_right = 160.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="Output Debug" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Compressed .KLZ Files (Debug)"

[node name="Export Tiled" type="CheckBox" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Export Tiled Images"

[node name="FILELoadAFS" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.AFS")
use_native_dialog = true

[node name="FILELoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadAFS" to="." method="_on_load_afs_pressed"]
[connection signal="toggled" from="VBoxContainer/Output Debug" to="." method="_on_output_debug_toggled"]
[connection signal="files_selected" from="FILELoadAFS" to="." method="_on_file_load_afs_files_selected"]
[connection signal="dir_selected" from="FILELoadFOLDER" to="." method="_on_file_load_folder_dir_selected"]
